--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
-lichesspgn.pgn filter=lfs diff=lfs merge=lfs -text
+*.pgn filter=lfs diff=lfs merge=lfs -text
 tuning_data.txt filter=lfs diff=lfs merge=lfs -text
+lichesspgn.pgn filter=lfs diff=lfs merge=lfs -text
